--- a/config_obs.yml
+++ b/config_obs.yml
@@ -15,7 +15,7 @@ tasks:
    - extract # Extract station data, (gridded observation data), and reanalysis data.
    - indicators # Compute xclim indicators on the datasets.
    - climatologies # Compute climatological operations for the indicators (mean, std, trend).
-   - performance # Compute measures between observations and reconstructions (as defined in xsdba.measures)
+   - performance # Compute performance metrics of type xsdba.measures.StatisticalPropertyMeasure between observations and reconstructions
 
 # Task Arguments
 
