--- a/config_obs.yml
+++ b/config_obs.yml
@@ -161,17 +161,15 @@ performance:  # ------------------------------------- Performance --------------
   #
   #   measures:
   #      MEASURE:
-  #        PROCESSING_LEVEL:
-  #          - variable: VARIABLE1
-  #            OTHER_ATTR: VALUE1
-  #            ...
-  #          - variable: VARIABLE2
-  #            OTHER_ATTR: VALUE2
-  #            ...
-  #          - ...
+  #         - variable: VARIABLE1
+  #           OTHER_ATTR: VALUE1
+  #           ...
+  #         - variable: VARIABLE2
+  #           OTHER_ATTR: VALUE2
+  #           ...
+  #         - ...
   #
   # MEASURE: Which measure we're computing                                   e.g., 'rmse', 'mae', etc.
-  # PROCESSING_LEVEL: The level at which we're computing it                  e.g., 'indicators', 'extracted'
   # VARIABLE: Which variables we're computing it for                         e.g., 'tg_mean_annual', 'pr_mean_seasonal'
   # OTHER_ATTR: Other attribute(s) which allow us to select each variable    e.g., 'frequency', 'source'
   #
@@ -181,24 +179,17 @@ performance:  # ------------------------------------- Performance --------------
 
   measures:
     rmse:
-      indicators:
-        - variable: tg_mean_annual
-        - variable: tg_mean_seasonal
-        - variable: pr_mean_annual
-        - variable: pr_mean_seasonal
+      - variable: tg_mean_annual
+      - variable: tg_mean_seasonal
+      - variable: pr_mean_annual
+      - variable: pr_mean_seasonal
   # Example of a more complex input structure:
   #measures:
-  #  rmse:
-  #    indicators: &annual_variables
+  #  rmse: &annual_variables
   #      - variable: tg_mean_annual
-  #        frequency: yr # Note: Here, specifying the frequency is redundant since variable names already differentiate them
   #      - variable: pr_mean_annual
-  #        frequency: yr
-  #    extracted: *annual_variables
   #  mae:
-  #    extracted:
   #      - variable: tg_mean_seasonal
-  #        frequency: qtr
 
   save:
     rechunk:
