--- a/environment.yml
+++ b/environment.yml
@@ -1,7 +1,6 @@
-name: refs
+name: obsflow
 channels:
   - conda-forge
-  - defaults
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
@@ -40,16 +39,22 @@ dependencies:
   - brotli=1.1.0=hb9d3cd8_2
   - brotli-bin=1.1.0=hb9d3cd8_2
   - brotli-python=1.1.0=py312h2ec8cdc_2
+  - brunsli=0.1=h9c3ff4c_0
   - bzip2=1.0.8=h4bc722e_7
   - c-ares=1.34.4=hb9d3cd8_0
+  - c-blosc2=2.15.2=h3122c55_1
   - ca-certificates=2025.1.31=hbcca054_0
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
+  - cairo=1.18.4=h3394656_0
+  - cairocffi=1.7.1=pyhd8ed1ab_1
+  - cairosvg=2.7.1=pyhd8ed1ab_1
   - cartopy=0.24.0=py312hf9745cd_0
   - certifi=2025.1.31=pyhd8ed1ab_0
   - cf_xarray=0.10.4=pyhd8ed1ab_0
   - cffi=1.17.1=py312h06ac9bb_0
   - cftime=1.6.4=py312hc0a28a1_1
+  - charls=2.4.2=h59595ed_0
   - charset-normalizer=3.4.1=pyhd8ed1ab_0
   - click=8.1.8=pyh707e725_0
   - clisops=0.16.1=pyhd8ed1ab_0
@@ -61,6 +66,7 @@ dependencies:
   - dask-core=2024.11.2=pyhff2d567_1
   - dask-expr=1.1.19=pyhd8ed1ab_0
   - dav1d=1.2.1=hd590300_0
+  - defusedxml=0.7.1=pyhd8ed1ab_0
   - deprecated=1.2.18=pyhd8ed1ab_0
   - distributed=2024.11.2=pyhff2d567_1
   - entrypoints=0.4=pyhd8ed1ab_1
@@ -69,11 +75,19 @@ dependencies:
   - et_xmlfile=2.0.0=pyhd8ed1ab_1
   - fasteners=0.19=pyhd8ed1ab_1
   - fastprogress=1.0.3=pyhd8ed1ab_1
+  - figanos=0.4.0=pyhd8ed1ab_0
   - filelock=3.18.0=pyhd8ed1ab_0
   - flexcache=0.3=pyhd8ed1ab_1
   - flexparser=0.4=pyhd8ed1ab_1
   - flox=0.10.1=pyhd8ed1ab_0
   - folium=0.19.5=pyhd8ed1ab_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=h77eed37_3
+  - fontconfig=2.15.0=h7e30c49_1
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
   - fonttools=4.56.0=py312h178313f_0
   - freetype=2.13.3=h48d6fc4_0
   - freexl=2.0.0=h9dce30a_2
@@ -96,6 +110,8 @@ dependencies:
   - hyperframe=6.1.0=pyhd8ed1ab_0
   - icu=75.1=he02047a_0
   - idna=3.10=pyhd8ed1ab_1
+  - imagecodecs=2024.12.30=py312h097a544_0
+  - imageio=2.37.0=pyhfb79c49_0
   - importlib-metadata=8.6.1=pyha770c72_0
   - intake=0.7.0=pyhd8ed1ab_0
   - intake-esm=2024.2.6=pyhd8ed1ab_2
@@ -103,9 +119,11 @@ dependencies:
   - joblib=1.4.2=pyhd8ed1ab_1
   - json-c=0.18=h6688a6e_0
   - jsonpickle=4.0.0=pyh29332c3_0
+  - jxrlib=1.1=hd590300_3
   - keyutils=1.6.1=h166bdaf_0
   - kiwisolver=1.4.8=py312h84d6215_0
   - krb5=1.21.3=h659f571_0
+  - lazy-loader=0.4=pyhd8ed1ab_2
   - lcms2=2.17=h717163a_0
   - ld_impl_linux-64=2.43=h712a8e2_4
   - lerc=4.0.0=h27087fc_0
@@ -141,6 +159,7 @@ dependencies:
   - libgfortran=14.2.0=h69a702a_2
   - libgfortran-ng=14.2.0=h69a702a_2
   - libgfortran5=14.2.0=hf1ad2bd_2
+  - libglib=2.84.1=h2ff4ddf_0
   - libgomp=14.2.0=h767d61c_2
   - libgoogle-cloud=2.36.0=hc4361e1_1
   - libgoogle-cloud-storage=2.36.0=h0121fbd_1
@@ -148,8 +167,10 @@ dependencies:
   - libgrpc=1.71.0=he753a82_0
   - libheif=1.19.7=gpl_hc18d805_100
   - libhwloc=2.11.2=default_h0d58e46_1001
+  - libhwy=1.2.0=hf40a0c7_0
   - libiconv=1.18=h4ce23a2_1
   - libjpeg-turbo=3.0.0=hd590300_1
+  - libjxl=0.11.1=h7b0646d_2
   - libkml=1.3.0=hf539b9f_1021
   - liblapack=3.9.0=31_h7ac8fdf_openblas
   - liblzma=5.6.4=hb9d3cd8_0
@@ -183,6 +204,7 @@ dependencies:
   - libxml2=2.13.7=h8d12d68_0
   - libzip=1.11.2=h6991a6a_0
   - libzlib=1.3.1=hb9d3cd8_2
+  - libzopfli=1.0.3=h9c3ff4c_0
   - llvmlite=0.44.0=py312h374181b_1
   - locket=1.0.0=pyhd8ed1ab_0
   - loguru=0.7.2=py312h7900ff3_2
@@ -226,6 +248,7 @@ dependencies:
   - pillow=11.1.0=py312h80c1187_0
   - pint=0.24.4=pyhd8ed1ab_1
   - pip=25.0.1=pyh8b19718_0
+  - pixman=0.46.2=h29eaf8c_0
   - platformdirs=4.3.7=pyh29332c3_0
   - pooch=1.8.2=pyhd8ed1ab_1
   - proj=9.6.0=h0054346_0
@@ -249,6 +272,7 @@ dependencies:
   - python-tzdata=2025.2=pyhd8ed1ab_0
   - python_abi=3.12=5_cp312
   - pytz=2024.1=pyhd8ed1ab_0
+  - pywavelets=1.8.0=py312hc0a28a1_0
   - pyyaml=6.0.2=py312h178313f_2
   - qhull=2020.2=h434a139_5
   - rav1e=0.6.6=he8a937b_2
@@ -260,8 +284,11 @@ dependencies:
   - rich=14.0.0=pyh29332c3_0
   - roocs-grids=0.1.2=pyhd8ed1ab_1
   - s2n=1.5.14=h6c98b2b_0
+  - scikit-image=0.25.2=py312hf9745cd_1
   - scikit-learn=1.6.1=py312h7a48858_0
   - scipy=1.15.2=py312ha707e6e_0
+  - seaborn=0.13.2=hd8ed1ab_3
+  - seaborn-base=0.13.2=pyhd8ed1ab_3
   - setuptools=75.8.2=pyhff2d567_0
   - shapely=2.0.7=py312h21f5128_1
   - shellingham=1.5.4=pyhd8ed1ab_1
@@ -274,6 +301,8 @@ dependencies:
   - svt-av1=3.0.2=h5888daf_0
   - tblib=3.0.0=pyhd8ed1ab_1
   - threadpoolctl=3.6.0=pyhecae5ae_0
+  - tifffile=2025.3.30=pyhd8ed1ab_0
+  - tinycss2=1.4.0=pyhd8ed1ab_0
   - tk=8.6.13=noxft_h4845f30_101
   - tmux=3.5=h4463017_0
   - toolz=1.0.0=pyhd8ed1ab_1
@@ -289,6 +318,7 @@ dependencies:
   - unicodedata2=16.0.0=py312h66e93f0_0
   - uriparser=0.9.8=hac33072_0
   - urllib3=2.3.0=pyhd8ed1ab_0
+  - webencodings=0.5.1=pyhd8ed1ab_3
   - wheel=0.45.1=pyhd8ed1ab_1
   - wrapt=1.17.2=py312h66e93f0_0
   - x265=3.5=h924138e_3
@@ -296,8 +326,13 @@ dependencies:
   - xclim=0.55.1=pyhd8ed1ab_0
   - xerces-c=3.2.5=h988505b_2
   - xesmf=0.8.7=pyhd8ed1ab_0
+  - xorg-libice=1.1.2=hb9d3cd8_0
+  - xorg-libsm=1.2.6=he73a12e_0
+  - xorg-libx11=1.8.12=h4f16b4b_0
   - xorg-libxau=1.0.12=hb9d3cd8_0
   - xorg-libxdmcp=1.1.5=hb9d3cd8_0
+  - xorg-libxext=1.3.6=hb9d3cd8_0
+  - xorg-libxrender=0.9.12=hb9d3cd8_0
   - xscen=0.12.0=pyhd8ed1ab_1
   - xsdba=0.3.2=pyhd8ed1ab_0
   - xyzservices=2025.1.0=pyhd8ed1ab_0
@@ -305,22 +340,12 @@ dependencies:
   - yaml=0.2.5=h7f98852_2
   - yarl=1.18.3=py312h178313f_1
   - zarr=2.18.4=pyhd8ed1ab_0
+  - zfp=1.0.1=h5888daf_2
   - zict=3.0.0=pyhd8ed1ab_1
   - zipp=3.21.0=pyhd8ed1ab_1
   - zlib=1.3.1=hb9d3cd8_2
+  - zlib-ng=2.2.4=h7955e40_0
   - zstandard=0.23.0=py312h66e93f0_1
   - zstd=1.5.7=hb8e6e7a_2
   - pip:
-      - cairocffi==1.7.1
-      - cairosvg==2.7.1
       - cssselect2==0.8.0
-      - defusedxml==0.7.1
-      - figanos==0.4.0
-      - imageio==2.37.0
-      - lazy-loader==0.4
-      - scikit-image==0.25.2
-      - seaborn==0.13.2
-      - tifffile==2025.3.30
-      - tinycss2==1.4.0
-      - webencodings==0.5.1
-prefix: /exec/jlavoie/.conda/refs
