Replaced term 'measure' with 'statistic' to avoid confusion with the xsdba.measures class

--- a/config_obs.yml
+++ b/config_obs.yml
@@ -157,10 +157,10 @@ performance:  # ------------------------------------- Performance --------------
     reconstruction: # Parameters used to search exclusively for reconstruction data in the catalog.
       type: ['reconstruction']
 
-  # Expected "measures" YAML dictionary structure:
+  # Expected "statistics" YAML dictionary structure:
   #
-  #   measures:
-  #      MEASURE:
+  #   statistics:
+  #      STATISTIC:
   #         - variable: VARIABLE1
   #           OTHER_ATTR: VALUE1
   #           ...
@@ -169,7 +169,7 @@ performance:  # ------------------------------------- Performance --------------
   #           ...
   #         - ...
   #
-  # MEASURE: Which measure we're computing                                   e.g., 'rmse', 'mae', etc.
+  # STATISTIC: Which statistic we're computing                                   e.g., 'rmse', 'mae', etc.
   # VARIABLE: Which variables we're computing it for                         e.g., 'tg_mean_annual', 'pr_mean_seasonal'
   # OTHER_ATTR: Other attribute(s) which allow us to select each variable    e.g., 'frequency', 'source'
   #
@@ -177,14 +177,14 @@ performance:  # ------------------------------------- Performance --------------
   # For example, if a variable is computed at multiple frequencies, but the frequency is not reflected in the variable name,
   # OTHER_ATTR can be used to capture that distinction.
 
-  measures:
+  statistics:
     rmse:
       - variable: tg_mean_annual
       - variable: tg_mean_seasonal
       - variable: pr_mean_annual
       - variable: pr_mean_seasonal
   # Example of a more complex input structure:
-  #measures:
+  #statistics:
   #  rmse: &annual_variables
   #      - variable: tg_mean_annual
   #      - variable: pr_mean_annual
