Turned on wmo standard for missing value checks

--- a/config_obs.yml
+++ b/config_obs.yml
@@ -197,7 +197,7 @@ scripting: # send an email when code fails or succeed
 
 set_options:
   data_validation: log
-  check_missing: skip
+  check_missing: wmo
 
 io: 
   save_to_zarr: # passed automatically to all save_to_zarr
