--- a/config_obs.yml
+++ b/config_obs.yml
@@ -135,6 +135,7 @@ aggregate:  # ------------------------------------- Climatological Operations --
     processing_level: indicators
   climatological_mean: 
     op: mean
+    min_periods: &min_periods_val 25
   vars_for_interannual_std: &indicators #TODO: make naming clearer
     - tg_mean_annual
     - tg_mean_seasonal
@@ -144,6 +145,7 @@ aggregate:  # ------------------------------------- Climatological Operations --
   #   - pr_std
   climatological_std: # automatically passed to the function
     op: std
+    min_periods: *min_periods_val
 
 performance:  # ------------------------------------- Performance --------------------------------------------------
   # Defines which statistical metrics to compute using functions from xsdba.measures.
