--- a/config_obs.yml
+++ b/config_obs.yml
@@ -20,7 +20,7 @@ tasks:
 # Task Arguments
 
 extract:  # ------------------------------------- Extraction --------------------------------------------
-# reanalysis
+#reanalysis
   reconstruction:
     dask:
       n_workers: 2
@@ -37,7 +37,7 @@ extract:  # ------------------------------------- Extraction -------------------
         tas: D
       other_search_criteria:
         source:
-          - ERA5-Land
+          #- ERA5-Land
           - RDRS
           - CaSR
           - EMDNA
@@ -58,6 +58,10 @@ extract:  # ------------------------------------- Extraction -------------------
         tasmin: *f32
         pr: *f32
       rechunk:
+        time: -1
+        X: 30
+        Y: 30
+    chunk:
         time: -1
         X: 30
         Y: 30
@@ -104,8 +108,8 @@ extract:  # ------------------------------------- Extraction -------------------
     extract_dataset: *extract
     save:
       rechunk:
-        time: -1
-        station: 50
+       time: -1
+       station: 50
 
 
 
@@ -135,6 +139,7 @@ aggregate:  # ------------------------------------- Climatological Operations --
     processing_level: indicators
   climatological_mean: 
     op: mean
+    min_periods: &min_periods_val 25
   vars_for_interannual_std: &indicators #TODO: make naming clearer
     - tg_mean_annual
     - tg_mean_seasonal
@@ -144,6 +149,7 @@ aggregate:  # ------------------------------------- Climatological Operations --
   #   - pr_std
   climatological_std: # automatically passed to the function
     op: std
+    min_periods: *min_periods_val
 
 performance:  # ------------------------------------- Performance --------------------------------------------------
   # Defines which statistical metrics to compute using functions from xsdba.measures.
@@ -197,7 +203,7 @@ scripting: # send an email when code fails or succeed
 
 set_options:
   data_validation: log
-  check_missing: skip
+  check_missing: wmo
 
 io: 
   save_to_zarr: # passed automatically to all save_to_zarr
