--- a/environment.yml
+++ b/environment.yml
@@ -334,7 +334,6 @@ dependencies:
   - xorg-libxext=1.3.6=hb9d3cd8_0
   - xorg-libxrender=0.9.12=hb9d3cd8_0
   - xscen=0.12.0=pyhd8ed1ab_1
-  - xsdba=0.3.2=pyhd8ed1ab_0
   - xyzservices=2025.1.0=pyhd8ed1ab_0
   - yamale=5.3.0=pyhd8ed1ab_0
   - yaml=0.2.5=h7f98852_2
@@ -349,3 +348,4 @@ dependencies:
   - zstd=1.5.7=hb8e6e7a_2
   - pip:
       - cssselect2==0.8.0
+      - git+https://github.com/Ouranosinc/xsdba.git@main
