--- a/config_obs.yml
+++ b/config_obs.yml
@@ -17,6 +17,7 @@ tasks:
    - climatologies # Compute climatological operations for the indicators (mean, std, trend).
    - performance # Compute performance metrics of type xsdba.measures.StatisticalPropertyMeasure between observations and reconstructions
    - spatial_mean
+   - coherence
 
 # Task Arguments
 
@@ -198,6 +199,17 @@ spatial_mean: # ------------------------------------- Spatial mean -------------
   save:
     rechunk:
       time: -1
+
+coherence:  # ------------------------------------- Coherence --------------------------------------------------
+  dask:
+    n_workers: 4
+    threads_per_worker: 4
+    memory_limit: "8GB"
+  inputs:
+    - variable: [tg_mean_annual]
+      type: reconstruction
+      source: ["EMDNA","CaSR","ERA5-Land","PCICBlend","RDRS"]
+
 
 # General Arguments
 
