Renamed 'Spatial mean' task to 'Regional mean' to better distinguish from the 'Coherence' task

--- a/paths_obs_template.yml
+++ b/paths_obs_template.yml
@@ -46,7 +46,7 @@ rechunk:
 indicators:
   path_yml: indicators_obs
 
-spatial_mean:
+regional_mean:
   region:
     shape: ./region_admin/region_admin.shp
 
