--- a/config_obs.yml
+++ b/config_obs.yml
@@ -16,7 +16,7 @@ tasks:
    - indicators # Compute xclim indicators on the datasets.
    - climatologies # Compute climatological operations for the indicators (mean, std, trend).
    - performance # Compute performance metrics of type xsdba.measures.StatisticalPropertyMeasure between observations and reconstructions
-   - spatial_mean
+   - regional_mean
    - coherence
 
 # Task Arguments
@@ -185,7 +185,7 @@ performance:  # ------------------------------------- Performance --------------
       station: -1
 
 
-spatial_mean: # ------------------------------------- Spatial mean --------------------------------------------------
+regional_mean: # ------------------------------------- Regional mean --------------------------------------------------
   dask:
     n_workers: 4
     threads_per_worker: 2
