--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,7 @@ dmypy.json
 /notebooks/Trying_Things.ipynb
 /Try_climatological_op.py
 /Long_names_source_period.txt
+
+# VSCode settings
+.vscode/
+.DS_Store
