--- a/config_obs.yml
+++ b/config_obs.yml
@@ -13,9 +13,9 @@
 tasks:
   #- extract # Extract station data, (gridded observation data), and reanalysis data.
   #- regrid # Regrid the simulation onto a common grid (ERA5-Land).
-  #- cleanup # Handle different units in datasets.
+  # - cleanup # Handle different units in datasets.
   - indicators # Compute xclim indicators on the datasets.
-  - climatologies # Compute climatological operations for the indicators (mean, std, trend).
+  # - climatologies # Compute climatological operations for the indicators (mean, std, trend).
   #- plotting # Make plots of results from climatological operations for annual, seasonal, and monthly data.
   #- "ensembles" # Compute/compare different datasets and assess uncertainties in historical data (ToDo)
 
@@ -42,8 +42,8 @@ extract:  # ------------------------------------- Extraction -------------------
         #- '2018' #'2018'
       other_search_criteria:
         source:
-#          - ERA5-Land
-#          - RDRS
+          - ERA5-Land
+          - RDRS
           - CaSR
     extract_dataset:
       region: &region
@@ -214,6 +214,7 @@ regrid:
       extrap_method: inverse_dist
       locstream_out: *stack
       reuse_weights: False
+  xy_chunksize : &xy_chunksize 50
   save: &save_time_-1
     mode: o
     rechunk:
@@ -256,6 +257,7 @@ cleanup:
 #      tasmax: interpolate
 #      tasmin: interpolate
 #      pr: [ 0 ]
+  xy_chunksize :  *xy_chunksize
   save:
     mode: o
     encoding:
@@ -264,11 +266,10 @@ cleanup:
       tasmin: *f32
       pr: *f32
 
-
 indicators:  # ------------------------------------- Indicators --------------------------------------------------
   dask:
     n_workers: 8
-    threads_per_worker: 5
+    threads_per_worker: 1
     memory_limit: "8GB"
   inputs:
     processing_level: extracted-cleaned
@@ -277,6 +278,7 @@ indicators:  # ------------------------------------- Indicators ----------------
     to: 2010-12-31
   compute_indicators:
     to_level: indicators
+  xy_chunksize : *xy_chunksize
   save: #*save_time_-1
     mode: o
 
@@ -288,13 +290,13 @@ aggregate:  # ------------------------------------- Climatological Operations --
   periods:
     # - ['1951', '1980']
     # - ['1961', '1990']
-    # - ['1961', '2020']
+    - ['1961', '2020']
     # - ['1971', '2000']
-    - ['1981', '2010']
+    # - ['1981', '2010']
     - ['1981', '2018']
     # - ['1988', '2017']
     # - ['1991', '2018']
-    # - ['1991', '2020']
+    - ['1991', '2020']
     # - ['1980', '1985']]
   input:
     processing_level: indicators
@@ -356,6 +358,7 @@ aggregate:  # ------------------------------------- Climatological Operations --
   climatological_trend: # automatically passed to the function
     op: linregress
     to_level: climatology
+  xy_chunksize : *xy_chunksize
   save:
     mode: o
 
